feat: add / and /health routes checking database and app status
